--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,12 @@ nav a:hover {
 
 
 /* Выподающий список */
-/* Выподающий список */
+
   
   .dropdown {
     float: left;
     overflow: hidden;
-  }
-  
+  }  
   .dropdown .dropbtn {
     font-size: 16px;  
     border: none;
@@ -90,9 +89,7 @@ nav a:hover {
     background-color: inherit;
     font-family: inherit;
     margin: 0;
-  }
-  
-  
+  }  
   .dropdown-content {
     /* display: none; */
     opacity: 0;
@@ -103,7 +100,6 @@ nav a:hover {
     z-index: 1;
     box-shadow: 0 0 15px rgb(0 0 0 / 50%);
   }
-  
   .dropdown-content a {
     float: none;
     color: black;
@@ -112,7 +108,6 @@ nav a:hover {
     display: block;
     text-align: left;
   }
-  
   .dropdown-content a:hover {
     background-color: #ddd;
   }
@@ -122,16 +117,12 @@ nav a:hover {
     transition: opacity 1s
     /* display: block; */
   }
-
   .dropdown:hover img{
     -ms-transform: rotate(180deg); /* IE 9 */
     transform: rotate(180deg); /* Standard syntax */
-  /*   transition: transform 1s cubic-bezier(0.12, 0, 0.39, 0); */
     transition: transform 0.6s cubic-bezier(0.61, 1, 0.88, 1); /*Плавность вращения*/
     
   }
-
-
   .svg {
     margin-left: 200px;
     padding: 20;
@@ -141,6 +132,16 @@ nav a:hover {
   .svg:hover img {
     -ms-transform: rotate(180deg); /* IE 9 */
     transform: rotate(180deg); /* Standard syntax */
-  /*   transition: transform 1s cubic-bezier(0.12, 0, 0.39, 0); */
+  }
+
+
+  /* Page1 */
     
+  .page1{
+    display: flex;
+    align-items: center;
+  }
+
+  .img_page1 {
+    flex-basis: 60%;
   }
