--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,14 @@ nav a {
 nav a:hover {
     color: rgb(220, 43, 20);
 }
-
+.page {
+  max-width: 1100px;
+  margin: 0 auto;
+}
 .page_header {
-    max-width: 1100px;
+    
     height: 95px;
-    margin: 0 auto;
+    
     text-align: center;
     background-color:antiquewhite;
     display: flex;
@@ -143,5 +146,5 @@ nav a:hover {
   }
 
   .img_page1 {
-    flex-basis: 60%;
+    flex-basis: 80%;
   }
